[package]
name = "bit_bool"
description = "This is a libray that makes a boolean that \"takes\" up 1 bit instead of 1 byte"
version = "0.1.0"
authors = ["LonnonjamesD <Limón#7879>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
